--- a/src/main/webapp/WEB-INF/views/templates/lessonPupilsList.html
+++ b/src/main/webapp/WEB-INF/views/templates/lessonPupilsList.html
@@ -30,7 +30,8 @@
                                        readonly>
                             </div>
                             <div class="form-group col-md-1">
-                                <input type="text" th:placeholder="${grades.get(pupil.id)}" class="form-control"
+                                <input type="text" name="currGrade" id="currGrade" th:value="${grades.get(pupil.id)}"
+                                       class="form-control"
                                        readonly>
                             </div>
 
@@ -43,7 +44,7 @@
                             <div class="form-group col-md-2">
                                 <button type="submit" name="action" value="update" class="btn btn-success"><i
                                         class="far fa-edit"></i></button>
-                                <button type="submit" name="action" value="delete" class="btn btn-secondary"
+                                <button type="submit" name="action" value="delete" id="delButton" class="btn btn-secondary"
                                         formnovalidate><i
                                         class="far fa-trash-alt"></i></button>
                             </div>
